--- a/test/FluentEmail.Razor.Tests/FluentEmail.Razor.Tests.csproj
+++ b/test/FluentEmail.Razor.Tests/FluentEmail.Razor.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\RazorLight\src\RazorLight\RazorLight.csproj" />
     <ProjectReference Include="..\..\src\FluentEmail.Core\FluentEmail.Core.csproj" />
     <ProjectReference Include="..\..\src\Renderers\FluentEmail.Razor\FluentEmail.Razor.csproj" />
   </ItemGroup>
